--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -32,6 +32,8 @@
     "CREATE": "Crear",
     "UPDATE": "Editar",
     "DELETE": "Eliminar",
-    "CLOSE": "Cerrar"
+    "CLOSE": "Cerrar",
+    "SIGN_IN": "Entrar",
+    "SIGN_OUT": "Salir"
   }
 }
