--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -24,16 +24,28 @@
     "ATTR": {
       "NAME": "Nombre",
       "EMAIL": "Correo",
+      "PASSWORD": "Contraseña",
       "ROL": "Rol"
     }
   },
+  "AUTH": {
+    "LABEL": "Ingrese su cuenta"
+  },
   "ACTIONS": {
     "LABEL": "Opciones",
-    "CREATE": "Crear",
-    "UPDATE": "Editar",
+    "CREATE": "Adicionar",
+    "UPDATE": "Actualizar",
     "DELETE": "Eliminar",
     "CLOSE": "Cerrar",
-    "SIGN_IN": "Entrar",
+    "SIGN_IN": "Iniciar Sesión",
     "SIGN_OUT": "Salir"
+  },
+  "REQUIRED": {
+    "EMAIL": "Correo requerido",
+    "PASSWORD": "Contraseña requerido"
+  },
+  "PLACEHOLDER": {
+    "EMAIL": "Introduzca el correo",
+    "PASSWORD": "Introduzca la contraseña"
   }
 }
