--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -14,18 +14,68 @@
       "EMERGENCYCONTACT": "Emergency Contact",
       "SSN": "Social Security Number",
       "ARN": "Alien Registration Number"
+    },
+    "FORM": {
+      "STEP1": "Required Fields",
+      "STEP2": "Optional Fields"
+    },
+    "NOTIFICATIONS": {
+      "SUCCESS": {
+        "CREATE": "The client was successfully created",
+        "EDIT": "The client was successfully edited",
+        "DELETE": "The client was successfully deleted"
+      },
+      "FAIL": {
+        "CREATE": "The client could not be created",
+        "EDIT": "The client could not be edited",
+        "DELETE": "The client could not be deleted"
+      }
     }
+  },
+  "ROLES": {
+    "0": "Developer",
+    "1": "Administrator",
+    "2": "Collaborator"
   },
   "USER": {
     "LABEL": {
-      "SINGULAR": "Users",
-      "PLURAL": "User"
+      "SINGULAR": "User",
+      "PLURAL": "Users"
     },
     "ATTR": {
       "NAME": "Name",
       "EMAIL": "Email",
       "PASSWORD": "Password",
       "ROL": "Rol"
+    },
+    "NOTIFICATIONS": {
+      "SUCCESS": {
+        "CREATE": "The user was successfully created",
+        "EDIT": "The user was successfully edited",
+        "DELETE": "The user was successfully deleted"
+      },
+      "FAIL": {
+        "CREATE": "The user could not be created",
+        "EDIT": "The user could not be edited",
+        "DELETE": "The user could not be deleted"
+      }
+    }
+  },
+  "DOCUMENT": {
+    "LABEL": {
+      "SINGULAR": "Documents",
+      "PLURAL": "Document"
+    },
+    "ATTR": {
+
+    }
+  },
+  "BILLING": {
+    "LABEL": {
+      "SINGULAR": "Billing"
+    },
+    "ATTR": {
+
     }
   },
   "AUTH": {
@@ -33,19 +83,24 @@
   },
   "ACTIONS": {
     "LABEL": "Options",
-    "CREATE": "Add",
-    "UPDATE": "Update",
-    "DELETE": "Delete",
+    "CREATE": "Add {{entity}}",
+    "UPDATE": "Update {{entity}}",
+    "DELETE": "Delete {{entity}}",
     "CLOSE": "Close",
     "SIGN_IN": "Sign In",
     "SIGN_OUT": "Sign Out"
   },
-  "REQUIRED": {
-    "EMAIL": "Email required",
-    "PASSWORD": "Password required"
+  "FORM": {
+    "ERROR": {
+      "REQUIRED": "{{attr}} required"
+    },
+    "PLACEHOLDER": "Enter {{attr}}"
   },
-  "PLACEHOLDER": {
-    "EMAIL": "Enter email",
-    "PASSWORD": "Enter password"
+  "MESSAGE": {
+    "DELETE": "Do you want to delete the {{entity}} ?"
+  },
+  "NOTIFICATIONS":{
+    "UNREGISTERED_USER": "User not registered",
+    "WRONG_CREDENTIALS": "Incorrect Email/Password"
   }
 }
