--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -14,7 +14,28 @@
       "EMERGENCYCONTACT": "Contacto de Emergencia",
       "SSN": "No. Seguridad Social",
       "ARN": "No. Registro Extranjero"
+    },
+    "FORM": {
+      "STEP1": "Información requerida",
+      "STEP2": "Información opcional"
+    },
+    "NOTIFICATIONS": {
+      "SUCCESS": {
+        "CREATE": "El cliente se creó satisfactoriamente",
+        "EDIT": "El cliente se editó satisfactoriamente",
+        "DELETE": "El cliente se eliminó satisfactoriamente"
+      },
+      "FAIL": {
+        "CREATE": "El cliente no pudo ser creado",
+        "EDIT": "El cliente no pudo ser editado",
+        "DELETE": "El cliente no pudo ser eliminado"
+      }
     }
+  },
+  "ROLES": {
+    "0": "Desarrollador",
+    "1": "Administrador",
+    "2": "Colaborador"
   },
   "USER": {
     "LABEL": {
@@ -26,6 +47,35 @@
       "EMAIL": "Correo",
       "PASSWORD": "Contraseña",
       "ROL": "Rol"
+    },
+    "NOTIFICATIONS": {
+      "SUCCESS": {
+        "CREATE": "El usuario se creó satisfactoriamente",
+        "EDIT": "El usuario se editó satisfactoriamente",
+        "DELETE": "El usuario se eliminó satisfactoriamente"
+      },
+      "FAIL": {
+        "CREATE": "El usuario no pudo ser creado",
+        "EDIT": "El usuario no pudo ser editado",
+        "DELETE": "El usuario no pudo ser eliminado"
+      }
+    }
+  },
+  "DOCUMENT": {
+    "LABEL": {
+      "SINGULAR": "Documento",
+      "PLURAL": "Documentos"
+    },
+    "ATTR": {
+
+    }
+  },
+  "BILLING": {
+    "LABEL": {
+      "SINGULAR": "Facturación"
+    },
+    "ATTR": {
+
     }
   },
   "AUTH": {
@@ -38,14 +88,22 @@
     "DELETE": "Eliminar",
     "CLOSE": "Cerrar",
     "SIGN_IN": "Iniciar Sesión",
-    "SIGN_OUT": "Salir"
+    "SIGN_OUT": "Salir",
+    "NEXT": "Siguente"
   },
-  "REQUIRED": {
-    "EMAIL": "Correo requerido",
-    "PASSWORD": "Contraseña requerido"
+  "FORM": {
+    "ERROR": {
+      "REQUIRED": "{{attr}} requerido"
+    },
+    "PLACEHOLDER": "Ingrese {{attr}}"
   },
-  "PLACEHOLDER": {
-    "EMAIL": "Introduzca el correo",
-    "PASSWORD": "Introduzca la contraseña"
-  }
+  "MESSAGE": {
+    "DELETE": "Desea eliminar el {{entity}} ?"
+  },
+  "NOTIFICATIONS":{
+    "UNREGISTERED_USER": "Usuario no registrado",
+    "WRONG_CREDENTIALS": "Correo/Contraseña incorrecto"
+  },
+  "401": "Autorización requerida",
+  "404": "Lo sentimos, no se encontro la página"
 }
