fixing some details

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -89,6 +89,7 @@
     "CLOSE": "Cerrar",
     "SIGN_IN": "Iniciar Sesión",
     "SIGN_OUT": "Salir",
+    "ACCOUNT": "Cuenta",
     "NEXT": "Siguente"
   },
   "FORM": {
