--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -89,6 +89,7 @@
     "CLOSE": "Close",
     "SIGN_IN": "Sign In",
     "SIGN_OUT": "Sign Out",
+    "ACCOUNT": "Account",
     "NEXT": "Next"
   },
   "FORM": {
