--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -37,6 +37,11 @@
     "1": "Administrador",
     "2": "Colaborador"
   },
+  "TITLES": {
+    "0": "Abogado",
+    "1": "Asistente Legal",
+    "2": "Personal"
+  },
   "USER": {
     "LABEL": {
       "SINGULAR": "Usuario",
@@ -46,7 +51,8 @@
       "NAME": "Nombre",
       "EMAIL": "Correo",
       "PASSWORD": "Contraseña",
-      "ROL": "Rol"
+      "ROL": "Rol",
+      "TITLE": "Título"
     },
     "NOTIFICATIONS": {
       "SUCCESS": {
@@ -96,7 +102,8 @@
     "ERROR": {
       "REQUIRED": "{{attr}} requerido"
     },
-    "PLACEHOLDER": "Ingrese {{attr}}"
+    "PLACEHOLDER": "Ingrese {{attr}}",
+    "SELECT_PLACEHOLDER": "Seleccione un {{attr}}"
   },
   "MESSAGE": {
     "DELETE": "Desea eliminar el {{entity}} ?"
